sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:11: error: ')' expected but $XMLSTART$< found.
	while ((i+ecart) <n) {
                         ^AlgCombSort:14: error: illegal start of simple expression
	}
        ^